[package]
name = "lancat"
version = "0.1.0-dev"
authors = ["Luis Enrique Muñoz Martín <lemunozm@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1"
whoami = "0.5"
clap = "2.32"
net2 = "0.2"
mio = "0.6"
crossbeam = "0.7"
term_size = "0.3"

