[package]
name = "lancat"
version = "0.3.0"
authors = ["Luis Enrique Muñoz Martín <lemunozm@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
description = "lancat is a tool that extends the behaviour of cat linux utility to the LAN"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1"
whoami = "0.5"
clap = "2.32"
net2 = "0.2"
mio = "0.6"
crossbeam = "0.7"
term_size = "0.3"

